--- a/Subcategory - Landing Page/ιδεωδη/css/magneticButton.css
+++ b/Subcategory - Landing Page/ιδεωδη/css/magneticButton.css
@@ -21,7 +21,7 @@ body {
 
 
 .content-button {
-	z-index: 99;
+	z-index: 1;
 	grid-area: content;
 	display: flex;
 	flex-direction: column;
@@ -36,7 +36,7 @@ body {
 	left: 2rem;
 }
 .extra-button{
-	z-index: 9;
+	z-index: 1;
 	color: #fff;
 	background-color: dimgray;
 }
